multiple columns for projects, fixed background shift when opening overlay

--- a/projects/static/projects/style.css
+++ b/projects/static/projects/style.css
@@ -1,161 +1,157 @@
 #header-box {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 10px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-bottom: 10px;
 }
 
 #header-box-text {
-  flex-basis: 320px;
+	flex-basis: 320px;
 }
 
 #header-box-image {
-  display: flex;
-  align-items: center;
-  flex-basis: 200px;
+	display: flex;
+	align-items: center;
+	flex-basis: 200px;
 }
 
 #header-box-resume {
-  flex-basis: 320px;
+	flex-basis: 320px;
+}
+
+#projects {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .project-button {
-  width: 100%;
+	flex-basis: 600px;
 }
 
-.project-button:hover {
-  transform: scaleY(1.04);
-  transition: transform 400ms;
-}
+	.project-button:hover {
+		transform: scaleY(1.04);
+		transition: transform 400ms;
+	}
 
 .project-box {
-  display: flex;
+	display: flex;
 }
 
 .project-box-left {
-  flex-basis: 5%;
-  background-image: radial-gradient(
-    farthest-side at 100% 50%,
-    lightcoral 80%,
-    transparent 100%
-  );
+	flex-basis: 5%;
+	background-image: radial-gradient( farthest-side at 100% 50%, lightcoral 80%, transparent 100% );
 }
 
 .project-box-centre {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 90%;
-  background-image: linear-gradient(
-    to top,
-    transparent 0%,
-    lightcoral 10%,
-    lightcoral 90%,
-    transparent 100%
-  );
+	display: flex;
+	flex-direction: column;
+	flex-basis: 90%;
+	background-image: linear-gradient( to top, transparent 0%, lightcoral 10%, lightcoral 90%, transparent 100% );
 }
 
 .project-title {
-  flex-grow: 1;
+	flex-grow: 1;
 }
 
 .project-image {
-  height: 250px;
+	height: 250px;
 }
 
 .tab-text {
-  display: none;
+	display: none;
 }
 
 .project-box-right {
-  flex-basis: 5%;
-  background-image: radial-gradient(
-    farthest-side at 0% 50%,
-    lightcoral 80%,
-    transparent 100%
-  );
+	flex-basis: 5%;
+	background-image: radial-gradient( farthest-side at 0% 50%, lightcoral 80%, transparent 100% );
 }
 
 /* https://www.w3schools.com/howto/howto_css_overlay.asp */
 .background-overlay {
-  position: fixed; /* Sit on top of the page content */
-  display: none; /* Hidden by default */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
-  z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
-  cursor: default; /* Add a pointer on hover */
-  overflow-y: auto;
+	position: fixed; /* Sit on top of the page content */
+	display: none; /* Hidden by default */
+	width: 100%; /* Full width (cover the whole page) */
+	height: 100%; /* Full height (cover the whole page) */
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+	z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
+	cursor: default; /* Add a pointer on hover */
+	overflow-y: auto;
+	color-scheme: light_dark;
 }
 
 .project-box-overlay {
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  right: 10%;
-  cursor: auto;
+	position: absolute;
+	top: 10%;
+	left: 10%;
+	right: 10%;
+	cursor: auto;
 }
 
 .top-row {
-  display: flex;
+	display: flex;
 }
 
 .exit-button {
-  flex-basis: min-content;
-  padding-top: 1.245em; /* 0.83 * 1.5 */
+	padding-top: 1.245em; /* 0.83 * 1.5 */
 }
 
 #footer-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-top: 50px;
-  padding-left: 20%;
-  padding-right: 20%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-top: 50px;
+	padding-left: 20%;
+	padding-right: 20%;
 }
 
 #footer-box-sub {
-  margin: 10px;
+	margin: 10px;
 }
 
 button {
-  background: none;
-  color: inherit;
-  border: inherit;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
+	background: none;
+	color: inherit;
+	border: inherit;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
 
 h1 {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 h2 {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 p {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 img {
-  width: 250px;
-  height: 250px;
-  max-width: 100%;
-  max-height: 100%;
+	width: 250px;
+	height: 250px;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 body {
-  background-image: linear-gradient(
-    transparent 0%,
-    rgba(240, 128, 128, 0.5) 100%
-  );
-  min-height: 100vh;
+	width: 100vw;
+	background-image: linear-gradient( transparent 0%, rgba(240, 128, 128, 0.5) 100% );
+	min-height: 100vh;
+}
+
+html {
+	overflow-x: hidden;
 }
